--- a/res/xml/syncadapter.xml
+++ b/res/xml/syncadapter.xml
@@ -1,2 +1,2 @@
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="at.kju.datacollector" android:accountType="at.kju.datacollector"  android:supportsUploading="true"/>
+    android:contentAuthority="@string/aam_account_type" android:accountType="@string/aam_account_type"  android:supportsUploading="true"/>
